--- a/menu.html
+++ b/menu.html
@@ -6,9 +6,14 @@
     <link rel="stylesheet" href="style.css" />
     <title>Cafe Menu</title>
   </head>
+  <!-- body is parent -->
   <body>
+    BODY
+    <!-- div child of body -->
     <div id="menu">
+      DIV
       <main>
+        MAIN
         <h1>CAMPER CAFE</h1>
         <p>Est. 2020</p>
         <section>
