changed id name menu to class name menu on html and css files

--- a/menu.html
+++ b/menu.html
@@ -10,7 +10,7 @@
   <body>
     BODY
     <!-- div child of body -->
-    <div id="menu">
+    <div class="menu">
       DIV
       <main>
         MAIN
