--- a/menu.html
+++ b/menu.html
@@ -16,6 +16,7 @@
         MAIN
         <h1>CAMPER CAFE</h1>
         <p class="established">Est. 2020</p>
+        <hr />
         <section>
           <h2>Coffee</h2>
           <article class="item">
@@ -59,6 +60,12 @@
           </article>
         </section>
       </main>
+      <footer>
+        <p>
+          <a href="https://www.freecodecamp.org">Visit our website</a>
+        </p>
+        <p>123 Free Code Camp Drive</p>
+      </footer>
     </div>
   </body>
 </html>
